package exceptions;

public class RolladieException extends Exception {
    public RolladieException(String message) {
        super(message);
    }
}
